# PAGINA-MS

./: app.py  pyproject.toml
static/: script.js  style.css  style2.css
templates/: forgot_password.html  index.html  pagina2.html  painel.html  reset_password.html
