[tool.poetry]
name = "pagina-ms"
version = "0.1.0"
description = ""
authors = ["YgorRibeiro7 <ygor.r.silva@aluno.senai.br>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"